--- a/events.css
+++ b/events.css
@@ -2641,7 +2641,7 @@ to{ transform:rotate(360deg);}
   margin: 0;
   width: 245px;
   left: 20%;
-  color: rgb(214, 212, 212);
+  color: white;
   border-top: 3px solid rgb(214, 212, 212);
     }
     .event_cont .solo_song .solo_song1 .para
