--- a/events.css
+++ b/events.css
@@ -2639,9 +2639,9 @@ to{ transform:rotate(360deg);}
     {
   font-size: 3rem;
   margin: 0;
-  width: 245px;
+  width: 195px;
   left: 20%;
-  color: white;
+  color:rgb(214, 212, 212);
   border-top: 3px solid rgb(214, 212, 212);
     }
     .event_cont .solo_song .solo_song1 .para
