--- a/events.css
+++ b/events.css
@@ -2009,7 +2009,7 @@ background-size: cover;
       margin: 0;
       width: 325px;
       left: 10%;
-      color: rgb(214, 212, 212);
+      color: red;
       border-top: 3px solid rgb(214, 212, 212);
         }
         .event_cont .solo_song .solo_song1 .para
