--- a/events.css
+++ b/events.css
@@ -2150,7 +2150,7 @@ background-size: cover;
         width: 510px;
         left: 10%;
         top: 10%;
-        color: rgba(21, 31, 73, 0.884);
+        color:white;
         border-top: 3px solid rgba(21, 31, 73, 0.884);
     }
     .event_cont .synchro_dance .synchro_dance1 .para
