--- a/events.css
+++ b/events.css
@@ -15,7 +15,7 @@ body
     color: red;
     cursor: pointer;
     outline: none;
-    border: 3px solid red;
+    border: 3px solid yellow;
     border-radius: 50%;
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
