--- a/events.css
+++ b/events.css
@@ -355,7 +355,21 @@ color: rgb(34, 34, 34);
 }
 .register
 {
+ margin: 0;
+ padding: 0;
+}
+.register h2
+{
     display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+.register h2 a
+{
+    padding: 0px !important;
+    font-family: 'Sen', sans-serif;
+    margin: 0;
+    padding: 0 !important;
 }
 .event_cont .solo_song
 {
