--- a/events.css
+++ b/events.css
@@ -2727,11 +2727,11 @@ to{ transform:rotate(360deg);}
         margin: 0;
         top: 25%;
         left: calc(100% - 47px);
-        border: 2px solid rgb(5, 71, 5);
+        border: 2px solid rgb(54, 133, 54);
     }
     .event_cont .solo_dance .solo_dance1 .register a 
     {
-       color: rgb(5, 71, 5);
+       color: rgb(54, 133, 54);
     }
     .event_cont .spot_dance
     {
@@ -2844,20 +2844,23 @@ background-position: 40% 0;
     {
         margin: 0;
         margin-top: 1px;
+        background: none;
+        border-bottom:1px solid black ;
     }
     .event_cont .fashion_show .fashion_show1
     {
         background-image: url("images/30.jpg");
         background-size: 1500px;
-        background-position: 60% 0% ;
+        background-position: 70% 0% ;
+        width: 50%;
     }
     .event_cont .fashion_show .fashion_show1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 163px;
-        left: 20%;
-        top: 10%;
+        width: 170px;
+        left: calc(100% - 85px);
+        top: 8%;
         color: rgba(235, 197, 240, 0.884);
         border-top: 3px solid rgba(235, 197, 240, 0.884);
     }
@@ -2865,28 +2868,34 @@ background-position: 40% 0;
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgba(252, 252, 252, 0.884);
-        top: 15%;
+        left: calc(100% - 130px);
+        color: rgb(44, 43, 43);
+        top: 11%;
     }
     .event_cont .fashion_show .fashion_show1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
+        left: calc(100% - 55px);
         color: rgba(235, 46, 46, 0.815);
-        top: 15%;
+        top: 12%;
     }
     .event_cont .fashion_show .fashion_show1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 20%;
+        left: calc(100% - 47px);
+        top: 14%;
+        border: 2px solid rgb(98, 104, 160);
+    }
+    .event_cont .fashion_show .fashion_show1 .register a 
+    {
+        color: rgb(98, 104, 160);
     }
     .event_cont .spot_photography 
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     }
     .event_cont .spot_photography .spot_photography2
     {
@@ -2894,48 +2903,54 @@ background-position: 40% 0;
     }
     .event_cont .spot_photography .spot_photography1
     {
-        width: 100%;
-        background-image: url("images/31.jpg");
+        width: 50%;
+        background-image: url("images/34.jpg");
         background-position:center;
-        background-size: 1000px;
-        background-position:  20% 50%;
+        background-size: cover;
+        background-position: 75%;
     }
     .event_cont .spot_photography .spot_photography1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 93px;
-        left: 15%;
-        top: 10%;
-        color: rgba(255, 255, 255, 0.884);
-        border-top: 3px solid rgba(255, 255, 255, 0.884);
+        width: 104px;
+        left: calc(100% - 132px);
+        top: 5%;
+        color: rgba(0, 78, 122, 0.884);
+        border-top: 3px solid rgba(0, 78, 122, 0.884);
     }
     .event_cont .spot_photography .spot_photography1 .para
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgba(252, 252, 252, 0.884);
-        top: 15%;
+        left: calc(100% - 130px);
+        color: rgba(4, 123, 128, 0.884);
+        top: 7%;
     }
     .event_cont .spot_photography .spot_photography1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
-        color: rgba(143, 88, 16, 0.815);
-        top: 15%;
+        left: calc(100% - 35px);
+        color: rgba(155, 88, 0, 0.815);
+        top: 9%;
     }
     .event_cont .spot_photography .spot_photography1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 20%;
+        left: calc(100% - 47px);
+        top: 9%;
+        border: 2px solid rgb(146, 61, 0);
+    }
+    .event_cont .spot_photography .spot_photography1 .register a 
+    {
+color: rgb(146, 61, 0);
     }
     .event_cont .muscle_mania
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     } 
     .event_cont .muscle_mania .muscle_mania2
     {
@@ -2943,52 +2958,54 @@ background-position: 40% 0;
     }
     .event_cont .muscle_mania .muscle_mania1
     {
-        width: 100%;
+        width: 50%;
         background-image: url("images/39.jpg");
-        background-position: 27% 0%;
+        background-position: 41% 0%;
         background-size: cover;
     }
     .event_cont .muscle_mania .muscle_mania1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 147px;
+        width: 152px;
         left: 20%;
-        top: 10%;
-        color: rgba(26, 85, 15, 0.884);
-        border-top: 3px solid rgba(26, 85, 15, 0.884);
+        top: 8%;
+        left: calc(100% - 73px);
+
     }
     .event_cont .muscle_mania .muscle_mania1 .para
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgba(43, 40, 40, 0.884);
-        top: 15%;
+        left: calc(100% - 130px);
+        color: rgba(97, 97, 97, 0.884);
+        top: 10%;
     }
     .event_cont .muscle_mania .muscle_mania1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
+        left: calc(100% - 55px);
         color: rgba(16, 124, 143, 0.815);
-        top: 15%;
+        top: 10%;
     }
     .event_cont .muscle_mania .muscle_mania1 .register
     {
         margin: 0;
         left: 35% ;
-        top: 20%;
-        border:3px solid white;
+        top: 12%;
+        left: calc(100% - 47px);
+        border:3px solid rgba(194, 0, 0, 0.904);
     }
     .event_cont .muscle_mania .muscle_mania1 .register a
     {
-        color: white;
+        color:  rgba(194, 0, 0, 0.904);
     }
     .event_cont .persona
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     }
     .event_cont .persona .persona2
     {
@@ -2996,59 +3013,67 @@ background-position: 40% 0;
     }
     .event_cont .persona .persona1
     {
-        width: 100%;
-        background-image: url("images/45.jpg");
-        background-position:center;
+        width: 50%;
+        background-image: url("images/49.jpg");
+        background-position: 35% 0%;
         background-size: cover;
     }
     .event_cont .persona .persona1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 160px;
-        left: 20%;
-        top: 10%;
-        color: rgba(139, 71, 15, 0.904);
-        border-top: 3px solid rgba(139, 71, 15, 0.904);
+        width: 184px;
+        left: calc(100% - 91px);
+        top: 5%;
+        color: rgba(15, 35, 71, 0.904);
+        border-top: 3px solid rgba(15, 35, 71, 0.904);
     }
     .event_cont .persona .persona1 .para
     {
         margin: 0;
-        width: 260px;
-        left: 10%;
-        color: rgba(0, 0, 0, 0.904);
-        top: 15%;
+        width: 300px;
+        left: calc(100% - 150px);
+        color: rgba(34, 34, 34, 0.904);
+        top: 9%;
     }
     .event_cont .persona .persona1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
-        color: rgba(59, 12, 12, 0.884);
-        top: 15%;
+        left: calc(100% - 55px);
+        color: rgba(1, 46, 4, 0.884);
+        top: 9%;
     }
     .event_cont .persona .persona1 .register
     {
         margin: 0;
         left: 35% ;
-        top: 20%;
+        top: 11%;
+        left: calc(100% - 47px);
+        border: 2px solid yellowgreen;
+    }
+    .event_cont .persona .persona1 .register a 
+    {
+        color: yellowgreen;
     }
     .event_cont .unplugged
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     }
     .event_cont .unplugged .unplugged1
     {
+        width: 50%;
         clip-path: none;
-        background-position: left;
+        background-position: center;
     }
     .event_cont .unplugged .unplugged1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 223px;
-        left: 20%;
+        width: 250px;
+        left: calc(100% - 125px);
         top: 10%;
         color: rgba(168, 0, 0, 0.904);
         border-top: 3px solid rgba(168, 0, 0, 0.904);
@@ -3057,28 +3082,34 @@ background-position: 40% 0;
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgba(255, 255, 255, 0.822);
-        top: 20%;
+        left: calc(100% - 130px);
+        color: rgba(117, 202, 223, 0.884);
+        top: 15%;
     }
     .event_cont .unplugged .unplugged1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
-        color: rgba(117, 202, 223, 0.884);
-        top: 22%;
+        left: calc(100% - 60px);
+        color: rgba(177, 174, 0, 0.884);
+        top: 18%;
     }
     .event_cont .unplugged .unplugged1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 28%;
+        left: calc(100% - 47px);
+        top: 24%;
+        border-color: rgba(15, 35, 71, 0.904);
+    }
+    .event_cont .unplugged .unplugged1 .register h2 a 
+    {
+        color:   rgba(15, 35, 71, 0.904) !important;
     }
     .event_cont .filler_dance
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     }
     .event_cont .filler_dance .filler_dance2
     {
@@ -3086,17 +3117,17 @@ background-position: 40% 0;
     }
     .event_cont .filler_dance .filler_dance1
     {
-        width: 100%;
+        width: 50%;
         background-image: url("images/51.jpg");
-        background-position:right;
+        background-position:center;
         background-size: cover;
     }
     .event_cont .filler_dance .filler_dance1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 245px;
-        left: 20%;
+        width: 257px;
+        left: calc(100% - 128px);
         top: 10%;
         color: rgba(4, 8, 34, 0.904);
         border-top: 3px solid rgba(4, 8, 34, 0.904);
@@ -3105,28 +3136,33 @@ background-position: 40% 0;
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgb(0, 0, 0);
-        top: 20%;
+        left: calc(100% - 130px);
+        color: rgb(141, 115, 0);
+        top: 15%;
     }
     .event_cont .filler_dance .filler_dance1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
-        color: rgba(224, 58, 58, 0.884);
-        top: 22%;
+        left: calc(100% - 55px);
+        color: rgba(243, 10, 10, 0.884);
+        top: 16%;
     }
     .event_cont .filler_dance .filler_dance1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 28%;
+        left: calc(100% - 47px);
+        top: 20%;
+    }
+    .event_cont .filler_dance .filler_dance1 .register a 
+    {
+        color: black;
     }
     .event_cont .b_boyeing
     {
         margin: 0;
         margin-top: 1px;
+        border-bottom:1px solid black ;
     }
     .event_cont .b_boyeing .b_boyeing2
     {
@@ -3134,7 +3170,7 @@ background-position: 40% 0;
     }
     .event_cont .b_boyeing .b_boyeing1
     {
-      width: 100%;
+      width: 50%;
       background-image: url("images/62.jpg");
       background-position:bottom;
       background-size: cover;
@@ -3144,8 +3180,8 @@ background-position: 40% 0;
     {
         font-size: 3rem;
         margin: 0;
-        width: 205px;
-        left: 20%;
+        width: 225px;
+        left: calc(100% - 112px);
         top: 10%;
         color: rgb(26, 169, 226);
         border-top: 3px solid rgb(26, 169, 226);
@@ -3154,42 +3190,48 @@ background-position: 40% 0;
     {
         margin: 0;
         width: 260px;
-        left: 10%;
-        color: rgba(0, 0, 0, 0.822);
-        top: 20%;
+        left: calc(100% - 130px);
+        color: rgb(0, 0, 0);
+        top: 15%;
     }
     .event_cont .b_boyeing .b_boyeing1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
+        left: calc(100% - 55px);
         color: rgba(163, 163, 163, 0.884);
-        top: 22%;
+        top: 17%;
     }
     .event_cont .b_boyeing .b_boyeing1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 28%;
+        left: calc(100% - 47px);
+        top: 20%;
+    }
+    .event_cont .b_boyeing .b_boyeing1 .register a 
+    {
+        color: black;
     }
     .event_cont .choreo_night
     {
         margin: 0;
         margin-top: 1px;
+        width: 100vw;
+        background: none;
     }
     .event_cont .choreo_night .choreo_night1
     {
-        width: 100%;
+        width: 50vw !important;
         background-image: url("images/50.jpg");
         background-size: cover;
-        background-position: left;
+        background-position: 75%;
     }
     .event_cont .choreo_night .choreo_night1 .title
     {
         font-size: 3rem;
         margin: 0;
-        width: 150px;
-        left: 20%;
+        width: 300px;
+        left: calc(100% - 150px);
         top: 10%;
         color: rgba(53, 33, 3, 0.904);
         border-top: 3px solid rgba(53, 33, 3, 0.904);
@@ -3197,24 +3239,29 @@ background-position: 40% 0;
     .event_cont .choreo_night .choreo_night1 .para
     {
         margin: 0;
-        width: 260px;
-        left: 10%;
-        color: rgba(255, 255, 255, 0.822);
-        top: 20%;
+        width: 280px;
+        left: calc(100% - 140px);
+        color: rgb(0, 107, 71);
+        top: 15%;
     }
     .event_cont .choreo_night .choreo_night1 .prize
     {
         margin: 0;
         width: 150px;
-        left: 25%;
-        color: rgba(163, 163, 163, 0.884);
-        top: 22%;
+        left: calc(100% - 75px);
+        color: rgba(231, 8, 138, 0.884);
+        top: 15%;
     }
     .event_cont .choreo_night .choreo_night1 .register
     {
         margin: 0;
-        left: 35% ;
-        top: 28%;
+        left: calc(100% - 47px);
+        top: 16%;
+        border-color: black;
+    }
+    .event_cont .choreo_night .choreo_night1 .register h2  a 
+    {
+        color: black !important;
     }
     .footer
     {
